fixed footer spacing

--- a/assets/css/lamana.css
+++ b/assets/css/lamana.css
@@ -93,7 +93,7 @@ padding:0px 20px 0px 20px;
 /* ///////////////////////// */
 .feed {
 align-items: center;
-justify-content: space-between;
+justify-content: center;
 background-color: white;
 }
 
@@ -107,11 +107,12 @@ iframe {
 .footer {
   /* position: fixed; */
   width: 100%;
+  padding:20px;
   background-color: #ed553b;
   color: white;
   font-size: 12px;
-   align-items: center;
-  justify-content: space-between;
+  align-items: left;
+
 }
 
 .footer-copyright {
